[package]
name = "dante_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0"

[lib]
name="lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "dante"
[[bin]]
name = "star"
