[package]
name = "dante_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.5.0"
lazy_static = "1.4.0"
rand="0.8.5"
colored = "2.0"

[lib]
name="lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "dante"
[[bin]]
name = "star"
